discussion/kv_engine/168585/168585_rev2_discussion.txt
======================================================================================================================
DESCRIPTION:

Decouple vbucket.h from kv_bucket.h

kv_bucket.h is one of the most expensive headers to compile in an
'everything' build of kv_engine, second only to GTest.h:

    ** Expensive headers:
    25140 ms: tlm/deps/googletest.exploded/include/gmock/gmock.h (included 58 times, avg 433 ms), included via:
    22681 ms: ../kv_engine/engines/ep/src/kv_bucket.h (included 44 times, avg 515 ms), included via:

52% of the include cost of kv_bucket.h is including the header
vbucket.h.

Restructure headers so kv_bucket.h doesn't need to include vbucket.h,
mostly by moving the types it does need into their own vbucket_types.h
header.

This makes the cost to include kv_bucket.h around half of what it
previously was.

Change-Id: Ice3ea6c8a251cac6ebbf9e0d7ddb8a621e9efc38

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Dave Rigby
Date: 2022-01-12 15:18:36.000000000
Message: 
Uploaded patch set 2: Patch Set 1 was rebased.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-01-12 15:43:49.000000000
Message: 
Patch Set 2: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/16433/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/16433/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/4414/ : ABORTED

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/16724/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/16724/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/17519/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/17519/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/24846/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/24846/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/14769/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/vbucket_types.h:54:28: error: no member named "unique_ptr" in namespace "std" [clang-diagnostic-error]
        std::function<std::unique_ptr<EventDrivenDurabilityTimeoutIface>(
                           ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/vbucket_types.h:54:39: error: use of undeclared identifier "EventDrivenDurabilityTimeoutIface" [clang-diagnostic-error]
        std::function<std::unique_ptr<EventDrivenDurabilityTimeoutIface>(
                                      ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/vbucket_types.h:55:17: error: type-id cannot have a name [clang-diagnostic-error]
                VBucket&)>;
                ^~~~~~~
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/vbucket_types.h:55:24: error: expected ")" [clang-diagnostic-error]
                VBucket&)>;
                       ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/vbucket_types.h:54:73: note: to match this "("
        std::function<std::unique_ptr<EventDrivenDurabilityTimeoutIface>(
                                                                        ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/vbucket_types.h:55:26: error: expected ";" after alias declaration [clang-diagnostic-error]
                VBucket&)>;
                         ^
                         ;
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/vbucket_types.h:57:14: error: unknown type name "SyncWriteTimeoutHandlerFactory" [clang-diagnostic-error]
extern const SyncWriteTimeoutHandlerFactory NoopSyncWriteTimeoutFactory;
             ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/14769/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/vbucket_types.h:54:28:
error: no member named "unique_ptr" in namespace "std" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/14769/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/13615/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/42750/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/36225/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/15575/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/4472/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
